--- a/index.html
+++ b/index.html
@@ -595,12 +595,12 @@
 
             /* Khung nhập liệu cho từng lốp - điều chỉnh kích thước và font khi in */
             .tire-position {
-                font-size: 8px !important; /* TĂNG FONT CỠ CHỮ CƠ BẢN KHI IN */
-                padding: 2px 3px !important; /* TĂNG PADDING KHI IN */
+                font-size: 10px !important; /* TĂNG FONT CỠ CHỮ CƠ BẢN KHI IN */
+                padding: 3px 4px !important; /* TĂNG PADDING KHI IN */
                 width: 60px !important; /* TĂNG CHIỀU RỘNG CỐ ĐỊNH CHO Ô NHẬP KHI IN */
                 height: auto !important;
                 line-height: 1 !important; /* TĂNG LINE-HEIGHT KHI IN */
-                border-radius: 3px !important;
+                border-radius: 4px !important;
             }
 
             /* Vị trí ô nhập liệu khi in (tương đối với sơ đồ đã thu nhỏ và căn giữa) */
@@ -623,7 +623,7 @@
                 padding: 0 1px !important;
             }
             .tire-position small {
-                font-size: 6px !important; /* TĂNG FONT ĐƠN VỊ KHI IN */
+                font-size: 7px !important; /* TĂNG FONT ĐƠN VỊ KHI IN */
                 margin-left: 1px !important;
             }
 
@@ -653,6 +653,7 @@
                 font-size: 9px;
                 /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng kiểm tra an toàn khi in */
                 font-weight: bold;
+                font-size: 13px;
             }
 
             .detailed-check { margin-top: 8px; font-size: 9px; }
@@ -663,10 +664,12 @@
             .detailed-check .hang-muc {
                 /* ĐIỀU CHỈNH: In đậm chữ trong cột "Hạng Mục" của bảng chi tiết khi in */
                 font-weight: bold;
+                font-size: 13px;
             }
             .detailed-check input[type="text"].hang-muc-input {
                 /* ĐIỀU CHỈNH: In đậm chữ trong ô input của cột "Hạng Mục" khi in */
                 font-weight: bold;
+                font-size: 13px;
             }
 
             .footer { font-size: 8px; margin-top: 8px; padding-top: 5px; line-height: 1.1; }
