--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
         /* Khung nhập liệu cho từng lốp - điều chỉnh kích thước và font */
         .tire-position {
             position: absolute;
-            background: #000;
+            background: white;
             border-radius: 5px;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
             font-size: 11px;
-            color: white;
+            color: Black;
             padding: 3px 5px;
             box-sizing: border-box;
             z-index: 1;
@@ -581,7 +581,7 @@
             .tire-diagram-container {
                 width: 180px !important; /* Thu nhỏ chiều rộng ảnh sơ đồ khi in */
                 height: 210px !important; /* Thu nhỏ chiều cao ảnh sơ đồ khi in */
-                margin-left: auto !important; /* Căn giữa trong khoảng không gian cột */
+                margin-left: 50px !important; /* Căn giữa trong khoảng không gian cột */
                 margin-right: auto !important; /* Căn giữa trong khoảng không gian cột */
                 transform: none !important; /* Reset transform scale */
                 padding-bottom: 5px !important;
@@ -606,15 +606,17 @@
             /* Vị trí ô nhập liệu khi in (tương đối với sơ đồ đã thu nhỏ và căn giữa) */
             /* Cần tinh chỉnh lại các giá trị này để khớp đúng trên sơ đồ đã điều chỉnh */
             /* DI CHUYỂN CÁC Ô SÁT BÁNH XE HƠN, VÀ ĐIỀU CHỈNH LẠI DO THAY ĐỔI KÍCH THƯỚC Ô */
-            .tire-front-left { top: 25px !important; left: -60px !important; } /* Đã điều chỉnh */
-            .tire-front-right { top: 25px !important; left: 130px !important; } /* Đã điều chỉnh */
-            .tire-rear-left { top: 110px !important; left: -60px !important; } /* Đã điều chỉnh */
-            .tire-rear-right { top: 110px !important; left: 130px !important; } /* Đã điều chỉnh */
+            .tire-front-left { top: 25px !important; left: -50px !important; } /* Đã điều chỉnh */
+            .tire-front-right { top: 25px !important; left: 150px !important; } /* Đã điều chỉnh */
+            .tire-rear-left { top: 110px !important; left: -50px !important; } /* Đã điều chỉnh */
+            .tire-rear-right { top: 110px !important; left: 150px !important; } /* Đã điều chỉnh */
             .tire-spare { bottom: 0px !important; left: 50% !important; transform: translateX(-50%) !important; width: 60px !important; } /* Tăng width khi in */
 
             .tire-input-group label {
                 font-size: 9px !important; /* TĂNG FONT LABEL KHI IN */
                 margin-right: 1px !important;
+				font-weight: bold !important;
+				font-family: Arial, Helvetica, sans-serif !important;
             }
             .pressure-input, .thickness-input {
                 width: 25px !important; /* TĂNG WIDTH INPUT KHI IN */
@@ -634,7 +636,7 @@
             .tire-size-recommendation input { min-width: 70px; font-size: 8px; }
 
             .recommendation { font-size: 8px; height: 60px; margin-top: 5px; }
-            .recommendation textarea { min-height: 50px; height: 50px; font-size: 8px; }
+            .recommendation textarea { min-height: 50px; height: 50px; font-size: 13px; width: 200%; padding: 4px; box-sizing: border-box; }
 
             .safety-check { padding: 5px; height: auto; flex-grow: 0; }
             /* ĐIỀU CHỈNH: safety-grid để thu hẹp cột "Hạng Mục" và cố định các cột checkbox. */
