--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -299,16 +299,16 @@
 
         <div class="print-section" id="printSection">
             <div class="header">
-                <div class="logo">PL</div>
+                <div class="logo"><img src="logo.png" alt="Logo Phi Long" style="height: 50px;"></div>
                 <div class="company-info">
-                    <div class="company-name">CÔNG TY TNHH Ô TÔ PHI LONG</div>
+                    <div class="company-name">LỐP XE PHI LONG BÌNH DƯƠNG </div>
                     <div class="company-details">
                         HỆ THỐNG LẮP XE - SỬA CHỮA - CHĂM SÓC Ô TÔ CAO CẤP<br>
                         www.philongauto.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: info@philongauto.com<br>
-                        0975 76 777 - 0975 76 7778&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSKH: 0981 086 777 - FAX: 0866 478 777
+                        0866.478.777 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSKH: 0866.478.777 - FAX: 0866 478 777
                     </div>
                 </div>
-                <div class="qr-code">QR</div>
+                <div class="qr-code"><img src="logo.png" alt="Logo Phi Long" style="height: 50px;"></div>
             </div>
 
             <div class="title">PHIẾU ĐÁNH GIÁ HIỆN TRẠNG LỐP</div>
