--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -325,6 +325,8 @@
         </a>
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
             Phiếu Kiểm Tra Lốp
+        <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
+            Phiếu Dịch Vụ
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
             Tra cứu thông tin xe
         </a>
