--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -337,7 +337,7 @@
         <input type="hidden" name="formType" value="PhieuKiemTraGam">
         <header class="mb-4 border-b border-slate-300 pb-3 flex flex-wrap items-center justify-between">
             <div class="logo-container mr-3 flex-shrink-0">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/81e5bc4f-abb6-43b3-9a14-42045cd3eb04.png"
+                <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg"
                     alt="Logo công ty Phi Long Automobile màu xanh và trắng, thiết kế dạng biểu tượng hình khối hiện đại"
                     onerror="this.style.display='none'"
                     style="background-color:#e0f2fe; border-radius: 8px; object-fit: contain;" />
