--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -397,6 +397,7 @@
         <div class="button-group">
             <button class="app-button print-button" id="printButton">🖨️ In Phiếu</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'">📄 Tra cứu thông tin xe </button>
+            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu Kiểm Tra Xe </button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
             <button class="app-button" id="submitToSheet">📤 Gửi Thông Tin</button>
@@ -414,7 +415,7 @@
                     </div>
                     <div class="header-right">
                         <div class="logo">
-                            PHILONGAUTO<br>CAR SERVICE
+                            <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg" alt="Logo Phi Long Auto" style="height: 90px;">
                         </div>
                     </div>
                 </div>
