--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                     </div>
                     <div class="header-right">
                         <div class="logo">
-                            <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg" alt="Logo Phi Long Auto" style="height: 90px;">
+                            <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg" alt="Logo Phi Long Auto" style="height: 90px; left:50px">
                         </div>
                     </div>
                 </div>
