--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phiếu Kiểm Tra Xe - PHI LONG AUTO</title>
     <style>
+	    .logo {text-align: right;}
+		.logo img {height: 90px; object-fit: contain; }
         /* Reset và cấu hình cơ bản */
         * {
             margin: 0;
@@ -714,7 +716,7 @@
                     </div>
                     <div class="header-right">
                         <div class="logo">
-                            <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg" alt="Logo Phi Long Auto" style="height: 90px; left:50px">
+                            <img src="https://longvt89.github.io/phieukiemtra/logophilong.jpg" alt="Logo Phi Long Auto" style="height: 90px;">
                         </div>
                     </div>
                 </div>
