--- a/index.html
+++ b/index.html
@@ -552,8 +552,9 @@
             .header { margin-bottom: 8px; padding-bottom: 5px; }
             .header h1 { font-size: 18px; }
             .form-number { font-size: 14px; }
-            .logo { width: 60px; height: 45px; font-size: 8px; }
-
+            .logo {max-width: 100px;max-height: 60px;text-align: right;}
+	    .logo img {max-width: 100%; maxheight: 100%; object-fit: contain; display: block; margin-left: auto;  /* Đẩy về phải */
+		      }
             .customer-info { margin-bottom: 8px; gap: 10px; }
             .info-group { margin-bottom: 6px; font-size: 14px; }
             .info-group .info-input { font-size: 14px; min-width: 40px; }
