--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -299,7 +299,7 @@
 
         <div class="print-section" id="printSection">
             <div class="header">
-                <div class="logo"><img src="logo.png" alt="Logo Phi Long" style="height: 50px;"></div>
+                <div class="logo"><img src="Logopl.png" alt="Logo Phi Long" style="height: 50px;"></div>
                 <div class="company-info">
                     <div class="company-name">LỐP XE PHI LONG BÌNH DƯƠNG </div>
                     <div class="company-details">
@@ -308,7 +308,7 @@
                         0866.478.777 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSKH: 0866.478.777 - FAX: 0866 478 777
                     </div>
                 </div>
-                <div class="qr-code"><img src="logo.png" alt="Logo Phi Long" style="height: 50px;"></div>
+                <div class="qr-code"><img src="LogotronPL.png" alt="Logo Phi Long" style="height: 50px;"></div>
             </div>
 
             <div class="title">PHIẾU ĐÁNH GIÁ HIỆN TRẠNG LỐP</div>
