--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -21,7 +21,7 @@
             overflow: hidden;
         }
         .header { display: flex; align-items: center; border-bottom: 2px solid #333; padding-bottom: 10px; margin-bottom: 15px; }
-        .logo { width: 65px; height: 65px; background: #4472C4; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; font-size: 26px; margin-right: 15px; }
+        .logo { width: 65px; height: 65px; background: transparent; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; font-size: 26px; margin-right: 15px; }
         .company-info { flex: 1; }
         .company-name { font-size: 17px; font-weight: bold; color: #4472C4; margin-bottom: 3px; }
         .company-details { font-size: 10.5px; color: #666; line-height: 1.15; }
