--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -25,7 +25,7 @@
         .company-info { flex: 1; }
         .company-name { font-size: 17px; font-weight: bold; color: #4472C4; margin-bottom: 3px; }
         .company-details { font-size: 10.5px; color: #666; line-height: 1.15; }
-        .qr-code { width: 45px; height: 45px; background: #333; display: flex; align-items: center; justify-content: center; color: white; font-size: 9px; }
+        .qr-code { width: 45px; height: 45px; background: transparent; display: flex; align-items: center; justify-content: center; color: white; font-size: 9px; }
         .title { text-align: center; font-size: 15px; font-weight: bold; background: #4472C4; color: white; padding: 6px; margin-bottom: 10px; }
         .tread-depth-section { display: flex; margin-bottom: 12px; }
         .depth-legend { flex: 1; margin-right: 20px; }
