--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
 
                 <div class="footer"></div>
                     <div class="recommendation1">
-                            <label for="notes">Lưu ý:</label>
+                            <label for="notes"> Khuyến cáo :</label>
                             <textarea id="notes" name="ghiChuChung" placeholder="Ghi chú các lưu ý cần thiết"></textarea>
                     </div>
                 <div class="signature-section">
