--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
 	    <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Dịch Vụ </button>
+	    <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng </button>
             <button class="tire-form-button" id="submitToSheet">📤 Gửi Thông Tin</button>
             <button class="tire-form-button clear-button" id="clearFormButton">🗑️ Xóa Form</button>
         </div>
