--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -330,6 +330,9 @@
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
             Tra cứu thông tin xe
         </a>
+        <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
+            Phiếu Bảo Dưỡng
+        </a>
     </div>
 
     
