--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -400,6 +400,7 @@
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu Kiểm Tra Xe </button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
+            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng</button>
             <button class="app-button" id="submitToSheet">📤 Gửi Thông Tin</button>
             <button class="app-button clear-button" id="clearFormButton">🗑️ Xóa Form</button>
         </div>
